updated npmrc to increase timeout in pnpm i

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,5 @@
 engine-strict=true
 include-workspace-root=false
 prefer-workspace-packages=true
+fetch-retry-maxtimeout = 6000000
+fetch-retry-mintimeout = 1000000
