--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-awesome-query-builder/core",
-  "version": "6.1.2-alpha.0",
+  "version": "6.1.2-1",
   "description": "User-friendly query builder for React. Core",
   "keywords": [
     "query-builder",
