--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-awesome-query-builder/root",
-  "version": "0.0.0",
+  "version": "0.0.1-0",
   "private": true,
   "description": "User-friendly query builder for React. Demo: https://ukrbublik.github.io/react-awesome-query-builder",
   "keywords": [
