--- a/lerna.json
+++ b/lerna.json
@@ -5,5 +5,5 @@
     "./packages/*"
   ],
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
-  "version": "6.1.2-3"
+  "version": "v6.1.2-4"
 }
