--- a/packages/fluent/package.json
+++ b/packages/fluent/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-awesome-query-builder/fluent",
-  "version": "6.1.2-3",
+  "version": "v6.1.2-4",
   "description": "User-friendly query builder for React. Fluent 8 widgets",
   "keywords": [
     "query-builder",
