--- a/packages/material/package.json
+++ b/packages/material/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-awesome-query-builder/material",
-  "version": "6.1.2-3",
+  "version": "v6.1.2-4",
   "description": "User-friendly query builder for React. Material-UI 4 widgets",
   "keywords": [
     "query-builder",
