--- a/packages/sandbox/package.json
+++ b/packages/sandbox/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-awesome-query-builder/sandbox",
-  "version": "6.1.2-3",
+  "version": "v6.1.2-4",
   "description": "Demo for @react-awesome-query-builder",
   "repository": {
     "type": "git",
