--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-awesome-query-builder/ui",
-  "version": "6.1.2-3",
+  "version": "v6.1.2-4",
   "description": "User-friendly query builder for React. Core React UI",
   "keywords": [
     "query-builder",
